third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/call_mutual_borrows.exp

Diagnostics:
error: mutable reference in local requires exclusive access
   ┌─ tests/reference-safety/v1-tests/call_mutual_borrows.move:14:29
   │
14 │         imm_imm(freeze(s1), freeze(s1));
   │         --------------------^^^^^^^^^^-
   │         │       │           │
   │         │       │           requirement enforced here
   │         │       previous call result
   │         conflicting reference used here
